--- a/bienêtre.html
+++ b/bienêtre.html
@@ -3,8 +3,8 @@
     <head>
         <title>Bien-être</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="/style/commun.css">
-        <link rel="stylesheet" href="/style/bienêtre.css">
+        <link rel="stylesheet" href="style/commun.css">
+        <link rel="stylesheet" href="style/bienêtre.css">
     </head>
 
     <body>
@@ -81,4 +81,5 @@
             </section>
         </main>
     </body>
+
 </html>
