--- a/créationformation.html
+++ b/créationformation.html
@@ -3,8 +3,8 @@
     <head>
         <title>Création de formation</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="/style/commun.css">
-        <link rel="stylesheet" href="/style/créationformation.css">
+        <link rel="stylesheet" href="style/commun.css">
+        <link rel="stylesheet" href="style/créationformation.css">
     </head>
 
     <body>
@@ -38,4 +38,5 @@
                 </section>
         </main>
     </body>
+
 </html>
