--- a/faireargent.html
+++ b/faireargent.html
@@ -3,8 +3,8 @@
     <head>
         <title>Faire de l'argent</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="/style/commun.css">
-        <link rel="stylesheet" href="/style/faireargent.css">
+        <link rel="stylesheet" href="style/commun.css">
+        <link rel="stylesheet" href="style/faireargent.css">
     </head>
 
     <body>
@@ -87,4 +87,5 @@
             </section>
         </main>
     </body>
+
 </html>
