--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Formation en ligne</title>
-        <link rel="stylesheet" href="/style/accueil.css">
-        <link rel="stylesheet" href="/style/commun.css">
+        <link rel="stylesheet" href="style/accueil.css">
+        <link rel="stylesheet" href="style/commun.css">
     </head>
     <body>
         <header>
@@ -81,4 +81,5 @@
 
         </main>
     </body>
+
 </html>
