--- a/information.html
+++ b/information.html
@@ -3,8 +3,8 @@
     <head>
         <title>Faire de l'argent en ligne</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="/style/commun.css">
-        <link rel="stylesheet" href="/style/information.css">
+        <link rel="stylesheet" href="style/commun.css">
+        <link rel="stylesheet" href="style/information.css">
     </head>
 
     <body>
@@ -34,4 +34,5 @@
         </p>
         </section>
     </body>
+
 </html>
